# nssm

./: Dockerfile  LICENSE  README.md  run_folder.sh  run_pair.sh
checkpointing/: __init__.py  binary.py  checkpointing.py  mixin.py  surface.py
datasets/: create.py  model.py  seamless_map.py  surface_map.py
dino_wrapper/: __init__.py  dino.py  extractor_fast.py  masked_correspondences.py
loops/: __init__.py  training_loop_gradient.py
losses/: domain_surface_map.py  landmarks.py
losses/domain/: circle.py  square.py
mains/: experiment_configurator.py
mesh_cut/: __init__.py  cut_mesh.py  flattener.py  tree_cutter.py
mitsuba_wrapper/: __init__.py  images.py  mitsuba.py  scene_definition.py
models/: __init__.py  neural_map.py  seamless_map.py
models/modules/: mlps.py
optimizers/: __init__.py
parametrization_cpp/: .gitignore  CMakeLists.txt  README.md
parametrization_cpp/cmake/: libigl.cmake
parametrization_cpp/include/: export.hpp
parametrization_cpp/src/: main_cut.cpp  main_dijkstra_seam.cpp  main_slim.cpp  main_slim_bnd.cpp
resources/: map.json  map_manual.json  overfit.json
runners/: checkpoint_runner.py  experiment_runner.py  main_runner.py  path_generator.py  train_runner.py
schedulers/: __init__.py
scripts/: align_meshes.py  compute_fuzzy_matches.py  extract_cones.py  make_configs.py  normalize_meshes.py  process_genus0_pair.py  update_parametrization.py
tasks/checkpointing/: __init__.py  seamless_surface_map.py  surface.py  surface_map.py
tasks/training/: .seamless_surface_map.py.swp  seamless_surface_map.py  surface.py  surface_map.py
utils/: __init__.py  algebra.py  automatic_map_folders.py  biharmonic_sampling.py  domains.py  geodesic.py  graph.py  io_mesh.py  logging.py  mesh.py  seamless.py  seed.py  surface_sampling.py
